--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,31 +65,10 @@
             android:insetTop="0dp"
             android:insetBottom="0dp"
             android:text="@string/login"
-            app:layout_constraintBottom_toTopOf="@+id/registerTxt"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.513"
             app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/registerTxt"
-            android:layout_width="109dp"
-            android:layout_height="23dp"
-            android:layout_marginBottom="20dp"
-            android:text="@string/register"
-            android:textColor="#673AB7"
-            android:textSize="17sp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            app:layout_constraintEnd_toEndOf="@+id/loginBtn" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="96dp"
-            android:layout_height="24dp"
-            android:text="@string/newuser"
-            android:textSize="17sp"
-            app:layout_constraintBottom_toBottomOf="@+id/registerTxt"
-            app:layout_constraintEnd_toStartOf="@+id/registerTxt"
-            app:layout_constraintTop_toTopOf="@+id/registerTxt" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -164,6 +143,36 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/btnFacebook"
             app:layout_constraintStart_toStartOf="@+id/btnFacebook" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+            app:layout_constraintStart_toStartOf="@+id/linearLayout">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="96dp"
+                android:layout_height="24dp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginRight="3dp"
+                android:gravity="end"
+                android:text="@string/newuser"
+                android:textSize="17sp" />
+
+            <TextView
+                android:id="@+id/registerTxt"
+                android:layout_width="109dp"
+                android:layout_height="23dp"
+                android:text="@string/register"
+                android:textColor="#673AB7"
+                android:textSize="17sp" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
