--- a/app/src/main/res/layout/trip_cell.xml
+++ b/app/src/main/res/layout/trip_cell.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
-                android:text="Source"
+                android:text="@string/tripSource"
                 app:layout_constraintStart_toEndOf="@+id/cbSelected"
                 app:layout_constraintTop_toTopOf="@+id/cbSelected" />
 
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
-                android:text="Destination"
+                android:text="@string/tripDestination"
                 app:layout_constraintBottom_toBottomOf="@+id/cbSelected"
                 app:layout_constraintStart_toEndOf="@+id/cbSelected" />
         </androidx.constraintlayout.widget.ConstraintLayout>
