--- a/app/src/main/res/layout/upcomingtrip_cardview.xml
+++ b/app/src/main/res/layout/upcomingtrip_cardview.xml
@@ -39,6 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:text="@string/tripSource"
             app:layout_constraintStart_toStartOf="@+id/endTxt"
             app:layout_constraintTop_toBottomOf="@+id/tripTitle" />
 
@@ -47,6 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:text="@string/tripDestination"
             app:layout_constraintStart_toStartOf="@+id/dateTxt"
             app:layout_constraintTop_toBottomOf="@+id/startTxt" />
 
@@ -57,6 +59,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
             android:layout_marginTop="16dp"
+            android:text="@string/tripDate"
             app:layout_constraintStart_toEndOf="@+id/tripImage"
             app:layout_constraintTop_toBottomOf="@+id/endTxt" />
 
@@ -66,6 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
+            android:text="@string/tripTime"
             app:layout_constraintStart_toEndOf="@+id/dateTxt"
             app:layout_constraintTop_toTopOf="@+id/dateTxt" />
 
