--- a/app/src/main/res/layout/activity_trip.xml
+++ b/app/src/main/res/layout/activity_trip.xml
@@ -70,15 +70,18 @@
         <EditText
             android:id="@+id/txtBackTripName"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:background="@drawable/custom_input"
             android:ems="10"
             android:hint="@string/HINT_TRIP_NAME"
             android:inputType="textPersonName"
             android:maxLength="150"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
             app:layout_constraintBottom_toBottomOf="@+id/userEmail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/userEmail"
@@ -87,14 +90,17 @@
         <EditText
             android:id="@+id/txtBackStartPoint"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:background="@drawable/custom_input"
             android:ems="10"
             android:hint="@string/HINT_START_POINT"
             android:inputType="textPersonName"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -103,14 +109,17 @@
         <EditText
             android:id="@+id/txtBackEndPoint"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:background="@drawable/custom_input"
             android:ems="10"
             android:hint="@string/HINT_END_POINT"
             android:inputType="textPersonName"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -154,6 +163,7 @@
             android:id="@+id/btnAddNotes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_note_add"
             android:text="AddNotes"
             app:layout_constraintBottom_toBottomOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="@+id/txtBackEndPoint"
@@ -168,7 +178,7 @@
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="@+id/txtBackEndPoint"
             app:layout_constraintStart_toStartOf="@+id/txtBackEndPoint"
-            app:layout_constraintTop_toBottomOf="@+id/radioGroup">
+            app:layout_constraintTop_toBottomOf="@+id/txtRepeatingNumber">
 
             <Button
                 android:id="@+id/dateBtn"
@@ -184,6 +194,44 @@
                 android:layout_margin="10dp"
                 android:background="@drawable/ic_timer" />
         </LinearLayout>
+
+        <Spinner
+            android:id="@+id/repeatingSpinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/txtRepeatingNumber"
+            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
+            app:layout_constraintStart_toEndOf="@+id/txtRepeatingNumber"
+            app:layout_constraintTop_toTopOf="@+id/txtRepeatingNumber" />
+
+        <EditText
+            android:id="@+id/txtRepeatingNumber"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:background="@drawable/custom_input"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="number"
+            android:maxLength="3"
+            android:text="3"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/swtchRepeating"
+            app:layout_constraintStart_toStartOf="@+id/radioGroup"
+            app:layout_constraintTop_toTopOf="@+id/swtchRepeating" />
+
+        <Switch
+            android:id="@+id/swtchRepeating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="50dp"
+            android:text="@string/LBL_REPEAT"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
         <!--
         <fragment
